# mentra

./: Makefile  README.md  pyproject.toml
.github/workflows/: docs-build.yml  lint.yml  tests.yml
docker/app/: Dockerfile
docs/: index.html  mergemate.html  search.js
docs/mergemate/: app.html  main.html
src/mentra/cli/application/: cli_app.py
src/mentra/cli/application/interfaces/: cli_interface.py
src/mergemate/: app.py  main.py
templates/: custom.html.jinja2
